goreleaser: fix copy-pasted project-name

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,4 +1,4 @@
-project_name: vault-token-helper
+project_name: statsd-rewrite-proxy
 env:
   - GO111MODULE=on
   - GOPROXY=https://proxy.golang.org
